--- a/EXTRAER DOCUMENTOS/netlify.toml
+++ b/EXTRAER DOCUMENTOS/netlify.toml
@@ -1,3 +1,12 @@
-# Este archivo le dice a Netlify dónde encontrar nuestras funciones serverless.
+# Este archivo le dice a Netlify la configuración de despliegue.
+
+# Configuración del "Build" (construcción del sitio)
+[build]
+  # El "Publish directory" es la carpeta que contiene tu archivo index.html.
+  # Asegúrate de que este nombre coincida EXACTAMENTE con el nombre de la carpeta en tu GitHub.
+  publish = "EXTRAER DOCUMENTOS"
+
+# Configuración de las funciones serverless.
 [functions]
   directory = "netlify/functions"
+
